[metadata]
name = hacks
author = Alexander Sosedkin
author-email = monk@unboiled.info
summary = hacks, a Python plugin library that doesn't play by the rules
description-file = README.md
home-page = https://github.com/t184256/hacks
license = MIT
classifier =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    plugins
    hacks

setup_requires_dist =
    pbr>=1.9
    setuptools>=17.1
tests_require =
    nose>=1.0

[files]
packages =
    hacks

[extras]
test = nose>=1.0
